--- a/alumni.html
+++ b/alumni.html
@@ -30,8 +30,8 @@
                          <li><a href="index.html" class="active">Beranda</a></li>
                          <li><a href="alumni.html">Alumni</a></li>
                          <li><a href="galeri.html">Galeri</a></li>  
-                         <li><a href="momen.html">Momen</a></li>
                          <li><a href="kontak.html">Kontak</a></li>
+                         <li><a href="lainnya.html">Lainnya</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -104,6 +104,15 @@
             <h3>Wali kelas</h3>
             <p>Muhammad Danu Tri Nugroho YS S.Kom</p>
         </div>
+
+        <div class="quote">
+            " Meski perjalanan kita di sekolah ini telah berakhir, langkah kita baru 
+            saja dimulai. Setiap dari kita akan menempuh jalan yang berbeda. 
+            Semoga ilmu yang kita peroleh menjadi bekal yang bermanfaat, dan semoga
+            kita semua diberikan kesuksesan dalam setiap langkah ke depan.
+            Terima kasih untuk semua yang telah menjadi bagian dari perjalanan ini. 
+            Sampai jumpa di masa depan dengan cerita dan pencapaian baru "
+        </div> 
     </section>
     <footer>
         <h1>©2025 - Joko Bimantaro</h1>
