--- a/galeri.html
+++ b/galeri.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section id="alumni">
+    <section id="galeri">
     <header>
         <div class="main-container">
     <!-- Navbar -->
@@ -30,8 +30,8 @@
                          <li><a href="index.html" class="active">Beranda</a></li>
                          <li><a href="alumni.html">Alumni</a></li>
                          <li><a href="galeri.html">Galeri</a></li>  
-                         <li><a href="momen.html">Momen</a></li>
-                         <li><a href="kontak.html">Kontal</a></li>
+                         <li><a href="kontak.html">Kontak</a></li>
+                         <li><a href="lainnya.html">Lainnya</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -45,10 +45,458 @@
      </header>
      <div class="konten-semua">
          <div class="judul-konten">
-             <h1>Galeri Kami</h1>
+             <h1>Galeri <span style="color: #0e4e92bd;">Kami</span></h1>
             </div>
         </div>
+        <div class="foto">
+            <!-- gambar 1 -->
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Ulang tahun SMK</p>
+                    </div>
+                    <img src="img/galeri/Binian.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar 2 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Ulang tahun SMK</p>
+                    </div>
+                    <img src="img/galeri/Binian2.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar 3 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Ulang tahun SMK</p>
+                    </div>
+                    <img src="img/galeri/Binian3.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar 4 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Ulang tahun SMK</p>
+                    </div>
+                    <img src="img/galeri/Binian4.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- lakian -->
+             <!-- gambar 1 -->
+             <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Jumat sehat</p>
+                    </div>
+                    <img src="img/galeri/Jamkos.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar2 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Jumat sehat</p>
+                    </div>
+                    <img src="img/galeri/Jamkos2.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar3 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Jumat sehat</p>
+                    </div>
+                    <img src="img/galeri/Jamkos3.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar4 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Jumat sehat</p>
+                    </div>
+                    <img src="img/galeri/Jamkos4.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- bajuhitam -->
+             <!-- gambar1 -->
+             <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Foto perpisahan</p>
+                    </div>
+                    <img src="img/galeri/bajuhitam.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Foto perpisahan</p>
+                    </div>
+                    <img src="img/galeri/bajuhitam2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Foto perpisahan</p>
+                    </div>
+                    <img src="img/galeri/bajuhitam3.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Foto perpisahan</p>
+                    </div>
+                    <img src="img/galeri/bajuhitam4.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- dengan guru -->
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Bapak Aidi</p>
+                    </div>
+                    <img src="img/galeri/aidi.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Bapak Aidi</p>
+                    </div>
+                    <img src="img/galeri/adidi2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Bapak Aidi</p>
+                    </div>
+                    <img src="img/galeri/aidi3.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Bapak Aidi</p>
+                    </div>
+                    <img src="img/galeri/aidi4.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- sebelum ukk -->
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/sebelumukk.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/sebelumukk2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/sebelum3.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/sebelum4.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/momen.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/momen2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/momen3.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Momen</p>
+                    </div>
+                    <img src="img/galeri/momen4.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- ukk -->
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk1.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk2.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk3.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk4.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk5.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk6.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk7.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk8.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari UKK</p>
+                    </div>
+                    <img src="img/galeri/ukk9.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Geladi</p>
+                    </div>
+                    <img src="img/galeri/geladi.jpg" alt="">
+                </div>
+            </div>
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Geladi</p>
+                    </div>
+                    <img src="img/galeri/geladi2.jpg" alt="">
+                </div>
+            </div>
+            
+
+            <!-- Random -->
+             <!-- gambar1 -->
+             <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>With pak danu</p>
+                    </div>
+                    <img src="img/galeri/random.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Fotbar gabut</p>
+                    </div>
+                    <img src="img/galeri/random2.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Gabut</p>
+                    </div>
+                    <img src="img/galeri/random3.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Sholat berjamaah</p>
+                    </div>
+                    <img src="img/galeri/random4.jpg" alt="">
+                </div>
+            </div>
+
+             <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Jam kosong</p>
+                    </div>
+                    <img src="img/galeri/41.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar2 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Hari raya</p>
+                    </div>
+                    <img src="img/galeri/Lebaran.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- gambar3 -->
+            <div   div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Magang</p>
+                    </div>
+                    <img src="img/galeri/Magang.jpg" alt="">
+                </div>
+            </div>
+
+        <!-- gambar4 -->
+        <div   div class="galer">
+            <div class="galeri-img">
+                <div class="kata">
+                    <p>Persiapan UKK</p>
+                </div>
+                <img src="img/galeri/Labkom.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="galer">
+            <div class="galeri-img">
+                <div class="kata">
+                    <p>Gabut</p>
+                </div>
+                <img src="img/galeri/random5.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="galer">
+            <div class="galeri-img">
+                <div class="kata">
+                    <p>Gabut</p>
+                </div>
+                <img src="img/galeri/random6.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="galer">
+            <div class="galeri-img">
+                <div class="kata">
+                    <p>Bukber</p>
+                </div>
+                <img src="img/galeri/bukber.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="galer">
+            <div class="galeri-img">
+                <div class="kata">
+                    <p>Bukber</p>
+                </div>
+                <img src="img/galeri/bukber2.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <p style="text-align: center; font-size: .8rem; font-style: italic; color: grey; margin-bottom: 1rem;">maaf apabila terlalu lemot 🙏</p>
+
     </section>
+    <footer>
+        <h1>©2025 - Joko Bimantaro</h1>
+        <p>build with HTML CSS and JavaScript</p> 
+     </footer>
     <script src="js/js.js"></script>
 </body>
 </html>
