--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                             <li><a href="#beranda" class="active">Beranda</a></li>
                             <li><a href="alumni.html">Alumni</a></li>
                             <li><a href="galeri.html">Galeri</a></li>  
-                            <li><a href="momen.html">Momen</a></li>
                             <li><a href="kontak.html">Kontak</a></li>
+                            <li><a href="lainnya.html">Lainnya</a></li>
                         </ul>
                     </nav>
                     <!-- Navbar selesai -->
@@ -45,7 +45,7 @@
         </header>
         <div class="judul">
             Website resmi TKJ Smkn 1 takisung
-            <p>Tahun 2021-2024</p>
+            <p>Tahun 2021 - 2024</p>
         </div>
     </section>
 
@@ -79,77 +79,66 @@
        
 <div class="isi-perjalanan">
 <details>
-   <summary>2021: Awal dari Perjalanan</summary>
-   <p>Tahun 2021 menjadi langkah pertama kami memasuki
-    SMKN 1 Takisung, namun bukan seperti yang kami bayangkan.
-    Pandemi Covid-19 masih menyelimuti dunia, dan kami pun harus
-    memulai perjalanan ini secara online. Interaksi dengan
-    teman-teman dan guru hanya terbatas melalui layar,
-    membuat kami sulit merasakan suasana sekolah yang sebenarnya.
-    Namun, sesekali kami diperbolehkan masuk untuk kelas khusus,
-    terutama Matematika dan Fisika. Momen-momen singkat itu menjadi
-    sangat berarti—kami akhirnya bisa bertemu langsung, meskipun 
-    terbatas dengan masker dan protokol kesehatan yang ketat.
-    Meski dunia terasa terisolasi, harapan kami untuk merasakan sekolah yang sesungguhnya tetap menyala.</p>
+   <summary>2021: Awal Cerita</summary>
+   <p>
+    Tahun 2021 menjadi awal perjalanan kami di SMKN 1 Takisung, 
+    namun tidak seperti yang dibayangkan. Pandemi Covid-19 masih 
+    berlangsung, memaksa kami untuk memulai pembelajaran secara 
+    daring. Interaksi dengan teman dan guru terbatas pada layar, 
+    sehingga kami belum merasakan suasana sekolah secara langsung.
+    Sesekali, kami mendapatkan kesempatan untuk hadir di sekolah,
+    terutama untuk mata pelajaran tertentu seperti Matematika dan
+    Fisika. Meski hanya sebentar, pertemuan tatap muka tersebut 
+    menjadi momen berharga. Kami akhirnya bisa bertemu langsung,
+    meskipun tetap menerapkan protokol kesehatan yang ketat, tetapi momen itu cukup berharga
+   </p>
  </details>
  
  <details>
-   <summary>2022: Kembali ke Normal</summary>
-   <p>Tahun ini, semuanya mulai berubah. Tatap muka kembali 
-    dilakukan, meski dengan aturan ketat. Setiap pagi kami 
-    harus memakai masker, mencuci tangan, dan menjaga jarak 
-    sebelum masuk kelas. Sekolah terasa berbeda, tapi kami 
-    bersyukur bisa merasakan suasana belajar yang lebih nyata.
-    Pada awalnya, pembelajaran masih terbatas hanya sampai
-    tengah hari, tapi sedikit demi sedikit, semuanya mulai 
-    kembali seperti biasa. Setelah naik ke kelas 11, akhirnya 
-    kami bisa merasakan sekolah dengan lebih leluasa. Kami
-    mulai mengenal satu sama lain lebih dalam, bercanda, 
-    bekerja sama dalam tugas, dan di sinilah kenangan mulai tercipta.
-    
+   <summary>2022: Seperti Semula</summary>
+   <p>
+    Tahun ini, keadaan mulai berubah. Pembelajaran tatap muka
+    kembali dilakukan, meskipun dengan aturan yang ketat. Setiap
+    pagi, kami diwajibkan memakai masker, mencuci tangan, dan 
+    menjaga jarak sebelum memasuki kelas. Sekolah terasa berbeda,
+    tetapi kami bersyukur dapat kembali merasakan suasana belajar secara langsung.
+    Pada awalnya, kegiatan belajar mengajar masih terbatas hingga tengah
+    hari. Namun, seiring waktu, semuanya perlahan kembali seperti semula.
+    Setelah naik ke kelas 11, kami akhirnya dapat menikmati kehidupan 
+    sekolah dengan lebih leluasa. Kami mulai lebih mengenal satu sama lain,
+    berbagi cerita, bekerja sama dalam tugas, dan dari sinilah berbagai kenangan mulai tercipta.
     </p>
  </details>
 
  <details>
-   <summary>2023: Menjejak Dunia Nyata</summary>
-   <p>Kelas 11 semester 2 menjadi titik awal petualangan baru bagi
-    kami. Di sekolah kami, siswa kelas 11 akan menjalani program 
-    magang, dan masing-masing dari kami tersebar di berbagai tempat.
-    Kami keluar dari zona nyaman, menghadapi dunia kerja yang 
-    sesungguhnya, dan mengumpulkan banyak cerita berharga.
-    Ketika program magang berakhir, kami kembali ke sekolah dengan 
-    pengalaman yang tidak terlupakan. Kami membagikan kisah suka dan 
-    duka dalam presentasi magang sebelum akhirnya bersiap menghadapi ujian kenaikan kelas 12.
-    Setelah melewati ujian, kami resmi menjadi siswa kelas 12—tahun
-    terakhir kami di sekolah ini. Tapi berbeda dengan sebelumnya,
-    waktu belajar kami semakin berkurang. Kami mulai memanfaatkan
-    waktu yang tersisa untuk kebersamaan, bermain, bercanda, dan
-    menciptakan kenangan yang lebih dalam. Kami sadar, hari-hari
-    kami di sekolah ini mulai menipis, dan kami ingin menikmatinya sebaik mungkin.</p>
+   <summary>2023: Pengalaman Baru</summary>
+   <p>
+    Semester dua di kelas 11 menjadi awal dari pengalaman baru bagi
+    kami. Di sekolah ini, siswa kelas 11 menjalani program magang 
+    di berbagai tempat, memberikan kesempatan untuk keluar dari zona 
+    nyaman dan merasakan langsung dunia kerja. Pengalaman ini mengajarkan 
+    banyak hal berharga yang tidak bisa didapatkan hanya di dalam kelas.
+    Setelah program magang berakhir, kami kembali ke sekolah dengan banyak
+    cerita untuk dibagikan. Setiap kelompok mempresentasikan pengalaman
+    mereka, kisah suka maupun tantangan yang dihadapi selama magang, sebelum 
+    akhirnya bersiap menghadapi ujian kenaikan kelas.
+    Memasuki kelas 12, kami sadar bahwa waktu di sekolah semakin terbatas.
+    Berbeda dari sebelumnya, jam pelajaran menjadi lebih singkat, memberi
+    kami lebih banyak kesempatan untuk menghabiskan waktu bersama. Momen
+    kebersamaan, tawa, dan kenangan yang tercipta semakin berharga karena 
+    kami tahu bahwa perjalanan di sekolah ini perlahan mendekati akhir.
+   </p>
  </details>
 
  <details>
-   <summary>2024: Akhir dari Perjalanan</summary>
-   <p>Tahun terakhir, babak penutup dari kisah yang tak ingin kami akhiri. 
-    Sebelum menghadapi ujian praktikum, kami sekelas berjalan-jalan bersama
-    guru-guru kami. Perjalanan dimulai dengan ziarah, momen yang penuh
-    harapan dan doa, lalu diakhiri dengan refreshing—tertawa bersama,
-    menikmati waktu yang semakin terasa cepat berlalu.
-    Tak lama setelah itu, kami mulai disibukkan dengan persiapan ujian.
-    Kami belajar bersama, saling membantu, dan akhirnya, saat itu pun 
-    tiba. Ujian Praktikum menjadi tantangan terakhir kami di sekolah ini.
-    Ada rasa tegang, ada rasa haru, tapi juga ada semangat untuk 
-    memberikan yang terbaik. Alhamdulillah, semuanya lulus!
-    Namun, satu momen terakhir masih menunggu—perpisahan sekolah. 
-    Sebelum acara utama, kami melakukan gladi selama 3 hari, menyempurnakan 
-    setiap detail untuk memastikan semuanya berjalan dengan baik.
-    Dan akhirnya, tanggal 7 Mei 2024 menjadi hari yang penuh makna. 
-    Hari di mana kami berdiri bersama, memakai toga, menerima penghargaan, 
-    dan mengucapkan salam perpisahan. Tangis haru bercampur tawa, karena 
-    kami tahu, setelah ini, jalan hidup akan membawa kami ke arah yang berbeda.
-    Mungkin ini akhir dari perjalanan kami di SMKN 1 Takisung, tapi bukan 
-    akhir dari persahabatan dan kenangan yang telah kami bangun di sini.
-    Sekolah ini, kelas ini, cerita ini—akan selalu menjadi bagian dari diri kami.</p>
+   <summary>2024: Akhir Cerita</summary>
+   <p>
+    Tahun terakhir menjadi babak penutup dari perjalanan yang penuh makna. Sebelum menghadapi ujian praktikum, kami berkesempatan untuk berjalan-jalan bersama para guru. Perjalanan ini diawali dengan ziarah, momen yang penuh doa dan harapan, kemudian diakhiri dengan kegiatan rekreasi yang membawa tawa dan kebersamaan, mengingat waktu di sekolah semakin terasa singkat.
+    Tak lama setelah itu, persiapan ujian mulai menyibukkan kami. Kami belajar bersama, saling membantu, dan akhirnya menghadapi tantangan terakhir di sekolah ini—Ujian Praktikum. Ada rasa tegang, haru, namun juga semangat untuk memberikan yang terbaik. Alhamdulillah, seluruh siswa berhasil lulus.
+    Namun, masih ada satu momen terakhir yang menunggu—perpisahan sekolah. Sebelum acara utama, kami menjalani gladi bersih selama tiga hari, memastikan setiap detail acara berjalan dengan lancar. Hingga akhirnya, tanggal 7 Mei 2024 menjadi hari yang bersejarah.
+    Hari itu, kami berdiri bersama dan mengucapkan salam perpisahan. Tangis haru bercampur tawa, menyadari bahwa setelah ini, masing-masing dari kami akan menempuh jalan yang berbeda.
+    Meskipun perjalanan kami di SMKN 1 Takisung telah usai, persahabatan dan kenangan yang terjalin di sini akan selalu menjadi bagian dari diri kami.
+   </p>
  </details>
 </div>
 
