--- a/kontak.html
+++ b/kontak.html
@@ -30,8 +30,8 @@
                          <li><a href="index.html" class="active">Beranda</a></li>
                          <li><a href="alumni.html">Alumni</a></li>
                          <li><a href="galeri.html">Galeri</a></li>  
-                         <li><a href="momen.html">Momen</a></li>
                          <li><a href="kontak.html">Kontak</a></li>
+                         <li><a href="lainnya.html">Lainnya</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -43,36 +43,37 @@
              </div>
          </div>
      </header>
-    </section>
-    <div class="konten-semua">
-        <div class="judul-konten">
-            <h1>Daftar alumni SMKN1 Takisung</h1>
-        </div>
-    </div>
-      <!-- Kontak -->
-      <section id="kontak">
-        <h4 class="pre-title pre-kontak">Kontak kami</h4>
-        <h1 class="section-title title-kontak" >Bisa tinggalkan pesan</h1>
-        <div class="kontak main-container">
-            <div class="kontak-left">
-                <form class="kontak-form" action="https://formspree.io/f/xqapaply" method="POST">
-                    <div>
-                        <input type="text" placeholder="Nama" name="name">
-                    </div>
-                    <div>
-                        <input type="email" placeholder="Email" name="email">
-                    </div>
-                    <div>
-                        <textarea name="messege" placeholder="Pesan" cols="30" rows="10"></textarea>
-                    </div>
-                    <div><button class="btn-submit">Kirim Pesan</button></div>
-                </form>
+     <div class="konten-semua">
+         <div class="judul-konten">
+             <h1>Hubungi <span style="color: #0e4e92bd;">Kami</span></h1>
             </div>
+        </div>
+            <!-- <h1 class="section-title title-kontak" >Bisa tinggalkan pesan</h1> -->
+            <div class="kontak main-container">
+                <div class="kontak-left">
+                    <form class="kontak-form" action="https://formspree.io/f/xqapaply" method="POST">
+                        <div>
+                            <input type="text" placeholder="Nama" name="name">
+                        </div>
+                        <div>
+                            <input type="email" placeholder="Email" name="email">
+                        </div>
+                        <div>
+                            <textarea name="messege" placeholder="Pesan" cols="30" rows="10"></textarea>
+                        </div>
+                        <div><button class="btn-submit">Kirim Pesan</button></div>
+                    </form>
+                </div>
+                    </div>
                 </div>
             </div>
-        </div>
-       </section>
-        <!-- Kontak selesai -->
+           </section>
+          
+            <footer>
+            <h1>©2025 - Joko Bimantaro</h1>
+            <p>build with HTML CSS and JavaScript</p> 
+          </footer>
+            <!-- Kontak selesai -->
     <script src="js/js.js"></script>
 </body>
 </html>
