--- a/alumni.html
+++ b/alumni.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsif.css">
     <link rel="stylesheet" href="css/miring.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="img/tkj.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
@@ -48,11 +49,12 @@
              <h1>Daftar alumni TKJ SMKN 1 Takisung</h1>
              <h2>2021 - 2024</h2>
             </div>
-            <div class="gambar">
+            <div class="gambar" data-aos="zoom-in-up">
                 <img src="img/fotbar.jpg" alt="fotbar">
             </div>
         </div>
-    <div class="nama">
+    <div class="nama" data-aos="fade-up"
+    data-aos-duration="3000">
         <div class="nama-kiri">
             <ul class="ul">
                     <li class="li">Akhmad Dedi Muhaidi</li>
@@ -119,5 +121,9 @@
         <p>build with HTML CSS and JavaScript</p> 
      </footer>
     <script src="js/js.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
