update animation and add section more

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsif.css">
     <link rel="stylesheet" href="css/miring.css">
+
+    <!-- aos animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- icon website -->
     <link rel="icon" href="img/tkj.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
@@ -50,16 +54,16 @@
         </div>
     </section>
 
-<section id="isi-beranda">
+<section id="isi-beranda" data-aos="fade-up">
     <!-- tentang kami -->
-    <div class="judul-isi">
-        <h1 data-aos="fade-right">Tentang kami</h1>
+    <div class="judul-isi" >
+        <h1>Tentang kami</h1>
     </div>
     <div class="judul-isi1">
-        <h2 data-aos="fade-right">─ Selamat datang di website resmi tkj smkn 1 takisung</h2>
+        <h2>─ Selamat datang di website resmi tkj smkn 1 takisung</h2>
     </div>
 
-    <div class="konten" data-aos="fade-right">
+    <div class="konten" >
         <h2>
             <p style="text-indent: 30px; margin-top: 5px;">Kami adalah alumni SMKN 1 Takisung, jurusan Teknik Komputer dan Jaringan (TKJ), yang memulai perjalanan kami pada tahun 2021 dan mengakhirinya pada tahun 2024. Selama tiga tahun ini, kami telah belajar, bertumbuh, dan berkembang bersama, menghadapi berbagai tantangan, serta menciptakan momen-momen berharga yang akan selalu kami kenang.</p>
             <p style="text-indent: 30px; margin-top: 5px;">Di sini, kami tidak hanya belajar tentang teknologi jaringan, pemrograman, dan sistem komputer, tetapi juga memahami arti kerja keras, persahabatan, dan kebersamaan. Setiap hari di sekolah adalah bagian dari perjalanan yang membentuk siapa kami hari ini dari momen penuh tawa saat belajar bersama, proyek yang menguras tenaga dan pikiran, hingga kebersamaan dalam menghadapi ujian dan tantangan.</p>
@@ -151,6 +155,8 @@
 </footer>
 
 <script src="js/js.js"></script>
+
+<!-- js aos animation -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
