--- a/lainnya.html
+++ b/lainnya.html
@@ -44,12 +44,17 @@
              </div>
          </div>
      </header>
-     <div class="gambarini">
+     <!-- <div class="gambarini">
          <img src="img/lainnya/idulfitri.jpg" alt="">
-     </div>
+     </div> -->
+     <div class="konten-semua">
+        <div class="judul-konten">
+            <h1>Website masih dalam perkembangan</h1>
+            </div>
+            </div>
  </div>
     </section>
-    <footer>
+    <footer class="footer-lain">
         <h1>©2025 - Joko Bimantaro</h1>
         <p>build with HTML CSS and JavaScript</p> 
       </footer>
