update galeri and komen

--- a/alumni.html
+++ b/alumni.html
@@ -23,16 +23,16 @@
      <div class="logo1">
          TKJ<span>21</span>
      </div>
-        <nav>
+        <nav class="navi">
             <div class="logo">
                 TKJ<span>21</span>
             </div>
             <ul>
                          <li><a href="index.html" class="active">Beranda</a></li>
                          <li><a href="alumni.html">Alumni</a></li>
-                         <li><a href="galeri.html">Galeri</a></li>  
+                         <li><a href="galeri.php">Galeri</a></li>  
                          <li><a href="kontak.html">Kontak</a></li>
-                         <li><a href="lainnya.html">Lainnya</a></li>
+                         <li><a href="lainnya.php">Lainnya</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -46,8 +46,8 @@
      </header>
      <div class="konten-semua">
          <div class="judul-konten">
-             <h1>Daftar alumni TKJ SMKN 1 Takisung</h1>
-             <h2>2021 - 2024</h2>
+             <h2>Daftar alumni TKJ SMKN 1 Takisung</h3>
+             <h3>2021 - 2024</h2>
             </div>
             <div class="gambar" data-aos="zoom-in-up">
                 <img src="img/fotbar.jpg" alt="fotbar">
@@ -102,12 +102,13 @@
                 </ul>
             </div>
         </div>
-        <div class="wali">
+        <div class="wali" data-aos="fade-up"
+    data-aos-duration="3000">
             <h3>Wali kelas</h3>
             <p>Muhammad Danu Tri Nugroho YS S.Kom</p>
         </div>
-
-        <div class="quote">
+        <div class="quote" data-aos="fade-up"
+    data-aos-duration="3000">
             " Meski perjalanan kita di sekolah ini telah berakhir, langkah kita baru 
             saja dimulai. Setiap dari kita akan menempuh jalan yang berbeda. 
             Semoga ilmu yang kita peroleh menjadi bekal yang bermanfaat, dan semoga
@@ -115,11 +116,12 @@
             Terima kasih untuk semua yang telah menjadi bagian dari perjalanan ini. 
             Sampai jumpa di masa depan dengan cerita dan pencapaian baru "
         </div> 
-    </section>
-    <footer>
-        <h1>©2025 - Joko Bimantaro</h1>
-        <p>build with HTML CSS and JavaScript</p> 
-     </footer>
+ </section>
+   <footer>
+        <p>©2025 - TKJ SMKN 1 TAKISUNG <br>
+            Build with HTML, CSS, and JavaScript
+    </p>
+    </footer>
     <script src="js/js.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
