--- a/kontak.html
+++ b/kontak.html
@@ -23,16 +23,16 @@
      <div class="logo1">
          TKJ<span>21</span>
      </div>
-        <nav>
+        <nav class="navi">
             <div class="logo">
                 TKJ<span>21</span>
             </div>
             <ul>
                          <li><a href="index.html" class="active">Beranda</a></li>
                          <li><a href="alumni.html">Alumni</a></li>
-                         <li><a href="galeri.html">Galeri</a></li>  
+                         <li><a href="galeri.php">Galeri</a></li>  
                          <li><a href="kontak.html">Kontak</a></li>
-                         <li><a href="lainnya.html">Lainnya</a></li>
+                         <li><a href="lainnya.php">Lainnya</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -70,10 +70,11 @@
             </div>
            </section>
           
-            <footer>
-            <h1>©2025 - Joko Bimantaro</h1>
-            <p>build with HTML CSS and JavaScript</p> 
-          </footer>
+   <footer>
+        <p>©2025 - TKJ SMKN 1 TAKISUNG <br>
+            Build with HTML, CSS, and JavaScript
+    </p>
+    </footer>
             <!-- Kontak selesai -->
     <script src="js/js.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
