--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="logo1">
             TKJ<span>21</span>
         </div>
-           <nav>
+           <nav class="navi">
                <div class="logo">
                    TKJ<span>21</span>
                </div>
                <ul>
                             <li><a href="#beranda" class="active">Beranda</a></li>
                             <li><a href="alumni.html">Alumni</a></li>
-                            <li><a href="galeri.html">Galeri</a></li>  
+                            <li><a href="galeri.php">Galeri</a></li>  
                             <li><a href="kontak.html">Kontak</a></li>
-                            <li><a href="lainnya.html">Lainnya</a></li>
+                            <li><a href="lainnya.php">Lainnya</a></li>
                         </ul>
                     </nav>
                     <!-- Navbar selesai -->
@@ -149,10 +149,11 @@
 
        </div>
 
-<footer>
-   <h1>©2025 - Joko Bimantaro</h1>
-   <p>build with HTML CSS and JavaScript</p> 
-</footer>
+   <footer>
+        <p>©2025 - TKJ SMKN 1 TAKISUNG <br>
+            Build with HTML, CSS, and JavaScript
+    </p>
+    </footer>
 
 <script src="js/js.js"></script>
 
